[6.125.0]: Revert position sticky to prevent layout issues

--- a/src/app/public/public.component.scss
+++ b/src/app/public/public.component.scss
@@ -2,6 +2,7 @@
 
 :host {
   display: block;
+  padding-top: $topbar-height;
   background-color: $main-background-color;
 
   @include media-breakpoint-down(md) {
